🐥 Fixed textbox overlapping

--- a/src/styles/designlab.css
+++ b/src/styles/designlab.css
@@ -1,7 +1,7 @@
 .textBox {
   position: fixed;
   bottom: 10px;
-  left: -64%;
+  left: -100%;
   padding: 30px;
   background-color: #fff;
   border-radius: 10px;
